-Jargon has been tested against iRODS2.2, iRODS2.3, iRODS2.4, iRODS2.4.1, and iRODS2.5

libraries
---------

-gsi-classes.jar (packaged in lib directory)
-junit-4.7.jar (packaged in lib) - used by unit testing classes, not necessary for Jargon deployment
-mockito-all-1.8.4.jar - used for unit testing, not necessary for Jargon deployment
-apache commons-exec-1.0.1.jar (packaged in lib directory) - used by unit testing classes, not necessary for Jargon deployment
-sl4j and log4j - used for logging (packaged in lib directory)

================================================================================================
Features and Changes
********
Switched to GForge bug numbering as of iRODS2.5
********

*[#112] [iROD-Chat:5741] (Jargon) IRODSFile.setResource(...) is limited 300 resources
 
*[#147] SQL incorrect for gen query associated with '<=' or '>=' or '<' or '>' comparisons
 
*[#156] [iROD-Chat:6033] Very bizarre file copy bug in iRODS 2.5/Jargon 2.5

*[#157] adding Resource.modifyStatus()

*[#176] put/get resource switching 
  *reroute for get/put
  *reroute for streams
  still needs some updates for data objects when no resource specified

*Addition of buffering capability for input streams for better performance

*[#166] gen query 'in' support - work in progress, waiting on testing with accompanying iRODS server patches

 
================================================================================================
Outstanding Issues

Please consult https://www.irods.org/bugzilla/buglist.cgi?query_format=specific&order=relevance+desc&bug_status=__open__&product=&content=jargon

for the latest open bugs and Jargon feature requests

================================================================================================
Documentation and Installation

-See the README.txt in this distribution
-Review Jargon documentation at: http://www.irods.org/index.php/Jargon
-Review information at the IRODS web site: http://www.irods.org